--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,10 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="Show Toast" />
+    <Button
+        android:id="@+id/test5"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="Show Toast" />
 </LinearLayout>
