--- a/app/src/main/res/layout/activity_picasso.xml
+++ b/app/src/main/res/layout/activity_picasso.xml
@@ -10,4 +10,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.guylaf.holdall.PicassoActivity">
 
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </RelativeLayout>
